# dotfiles

./: CLAUDE.md  Cargo.toml  Makefile  README.md  config.reference.toml  flake.nix  install.sh  release.sh
dev/docs/: performance-audit.md
docs/: config.md  ipc.md
driftwm/.config/driftwm/: HDMI-A-1screen.sh  areascreen.sh  clip-notify.sh  colemak-daemon.sh  colemak.sh  config.toml  eDP-1screen.sh  en-layout.sh  kbd-layout-monitor.py  outputscreen.sh  toggle-layout.sh
extras/widgets/: common.py  stats_widget.py
fuzzel/.config/fuzzel/: fuzzel.ini  fuzzel_niri.ini
kitty/.config/kitty/: kitty.conf
mako/.config/mako/: config  config_drift
nvim/.config/nvim/: lazy-lock.json  lazyvim.json
src/: decorations.rs  text.rs
src/backend/: udev.rs  winit.rs
src/config/: mod.rs  parse_helpers.rs  toml.rs  types.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: xdg_shell.rs
src/input/: actions.rs  gestures.rs
src/input/gestures/: pinch.rs  swipe.rs
src/layout/: snap.rs
src/render/: background.rs  capture_background.rs  layers.rs  mod.rs  shaders.rs
src/shaders/: tile_bg.glsl
src/state/: cluster_snapshot.rs  fullscreen.rs  init.rs  mod.rs  navigation.rs  reload.rs  render_cache.rs
swayosd/.config/swayosd/: style.css
tests/: snap_test.rs
waybar/.config/waybar/: config.jsonc  config_drift.jsonc  kbd-layout.sh  nmtui.sh  style.css  style_drift.css  switch_layout.sh
wlogout/.config/wlogout/: apps_layout  chromium_layout  layout  layout_drift  links_layout  scripts_layout  style.css  style_apps.css  style_old.css
zsh/: .zshrc
(+15 files in other folders)
